--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -7,6 +7,7 @@
 <body>
   {% include nav.html %}
   {{ content }}
+  {% include footer.html %}
 </body>
   {% include scripts.html %}
   <script src="//cdn.bootcss.com/jquery.qrcode/1.0/jquery.qrcode.min.js"></script>
