--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
   <body>
   {% include nav.html %}
     {{ content }}
+  {% include footer.html %}
   </body>
   {% include scripts.html %}
 </html>
